--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Reset de estilo básico */
+
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +11,6 @@ body {
     color: #fff;
 }
 
-/* Estilo do Menu Lateral */
 .menu-toggle {
     position: absolute;
     top: 20px;
@@ -57,7 +56,6 @@ body {
     color: #fff;
 }
 
-/* Cabeçalho com imagem */
 .header {
     text-align: center;
     margin-top: 80px;
@@ -70,7 +68,6 @@ body {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
 
-/* Estilo do Banner */
 .banner {
     background-color: rgba(0, 0, 0, 0.7);
     padding: 50px 0;
@@ -79,22 +76,20 @@ body {
 
 .banner h3 {
     font-size: 2.5rem;
-    color: #00aaff; /* Título do Trailer em azul */
+    color: #00aaff; 
 }
 
-/* Estilo de Títulos */
 h1, h2, h3 {
-    color: #00aaff; /* Cor azul para os títulos */
+    color: #00aaff; 
     font-family: 'Arial', sans-serif;
 }
 
-/* Cards dos Atores */
 .actors-cards {
     display: flex;
     justify-content: space-around;
     margin: 20px;
     flex-wrap: wrap;
-    gap: 20px; /* Adiciona espaçamento entre os cards */
+    gap: 20px; 
 }
 
 .actor-card {
@@ -109,13 +104,13 @@ h1, h2, h3 {
 }
 
 .actor-card:hover {
-    transform: scale(1.05); /* Animação para aumentar o card ao passar o mouse */
+    transform: scale(1.05); 
 }
 
 .actor-img {
     width: 100%;
-    height: 300px; /* Ajuste a altura conforme necessário */
-    object-fit: cover; /* Faz a imagem cobrir a área do container sem distorcer */
+    height: 300px; 
+    object-fit: cover; 
     border-radius: 8px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
 }
@@ -133,7 +128,6 @@ h1, h2, h3 {
     margin-top: 5px;
 }
 
-/* Estilo da Sinopse */
 .content {
     padding: 20px;
     text-align: justify;
@@ -145,7 +139,6 @@ h1, h2, h3 {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
-/* Estilo do Rodapé */
 .footer {
     background-color: #222;
     text-align: center;
@@ -158,13 +151,11 @@ h1, h2, h3 {
     color: #bbb;
 }
 
-/* Estilo de Contato */
 #contato {
     background-color: #00aaff;
     color: #fff;
 }
 
-/* Responsividade */
 @media (max-width: 768px) {
     .menu-toggle {
         font-size: 40px;
